ASP/WebApplication1/WebApplication1/Content/CSS/style.css
/*The css is ordered in the way the html is nested in the layout.cshtml. */

body
{
	background-color: white;
	margin: 0;
	padding: 0;
	font-family: 'Open Sans', sans-serif;
}


a[name]	/* jump target for menu items on the home page */
{
	position: relative;
	bottom: 65px; /* push content down, otherwise the target is obscured by the menu */
	visibility: hidden;
	float: left;
}

/*
	Menu bar.
*/

nav
{
	background-color: #DC0000;
	width: 100%;
	padding: 0;
	margin: 0;
	
	position: fixed;	/* keep the menu bar at the top */
	top: 0px;
}

nav ul
{
	padding: 0px;
	margin: 0 auto 0 auto;
}

nav li
{
	padding: 0px;
	text-decoration: none;
	display: inline;
	text-align: center;
	margin: 0;
}

nav li:first-child a
{
	background-color: transparent;	/* make sure background color doesn't change on hover */
	background-image: url(../Images/Lisa-logo.png);
	background-repeat: no-repeat;
	background-position: center center;
}

nav a
{
	float: left;
	color: white;
	text-decoration: none;
	margin: 0;
}

nav a:hover
{
	background-color: #FF0000;
}

nav a:active
{
	background-color: #BE0000;
}
	
#logobutton:hover
{
	background-color: #DC0000;
}

#logobutton:active
{
	background-color: #DC0000;
}

header
{
	width: 100%;
	color: white;
	position: relative;
	padding-bottom: 37%;
	background-image: url("/Content/Images/banner16-6.png");
	background-size: 100%;
	background-repeat: no-repeat;
}

footer
{
	width: 100%;
	color: white;
	background-image: url("/Content/Images/bottom.png");
	background-size: 100%;
	background-repeat: no-repeat;
    padding: 5px 0 5px 0;
}

footer h2
{
	padding: 10px 20px 10px 20px;
	max-width: 1090px;
	margin: 2% auto 0 auto;
	font-weight: normal;
}

address
{
	position: static;
	max-width: 1090px;
	margin: 0 auto 0 auto;
	padding: 0 20px 0 20px;
}

footer p
{
	margin: 2px 0 2px 0;
	padding: 0;
	float: left;
	width: 50%;
}

/* The code below is style that only applies to that element when it is wider than 801px. */

@media all and (min-width: 801px) 
{
	nav
	{
		z-index: 50;
		height: 65px;
		width: 100%;
	}

	nav ul
	{
		text-align: center;
		display: block;
		padding: 0;
		margin: 0 auto;
		height: 100%;
		width: 100%;
		max-width: 1130px;
	}

	nav li
	{
		display: inline-block;
		width: 16.6%;	/* make all cells the same width */
		height: 100%;
	}

	nav a
	{
		display: block;
		height: 45px;
		width: 100%;
		text-align: center;
		padding-top: 20px;
	}

	nav ul li:last-child
	{
		display: none; 
	}

	#responsiveButton 
	{
		display: none;
	}

	header
	{
		margin: 65px 0 0 0;
	}

	address
	{
		padding-bottom: 80px;
	}
}

/* The code below is style that only applies to that element when it is smaller than 800px. */

@media all and (max-width: 800px) 
{
	nav
	{
		width: 40%;
		padding: 0;
		margin: 0;
		height: auto;
		z-index: 50;
		top: 0px;
		display: none;
	}

	nav li:first-child a
	{
		background-size: auto 35px;
	}

	nav:target {
		display: inline;
	}

	nav ul
	{
		padding: 0;
		max-width: 1130px;
		margin: 0 auto 0 auto;
	}

	nav li
	{
		padding: 0;
		text-decoration: none;
		margin: 0;
		width: 100%;
		height: 40px;
		text-align: center;
		display: inline;
	}

	nav a
	{
		color: white;
		text-decoration: none;
		background-color: #DC0000;
		height: 30px;
		padding: 10px 0 0 0;
		margin: 0;
		width: 100%;
		float: left;
	}

	nav a:hover
	{
		background-color: #FF0000;
	}

	nav a:active
	{
		background-color: #BE0000;
	}

	nav span
	{
		position: relative;
		top: 10px;
	}

	nav img
	{
		padding-top: 5px;
		padding-bottom: 5px;
		height: 35px;
	}

	#responsiveButton
	{
		margin: 0;
		padding: 0;
		width: 30px;
		height: 30px;
		position: fixed;
		float: left;
		z-index: 20;
		background-image: url("/Content/Images/Hamburger.png");
	}

	#responsiveButton a
	{
		display: inline-block;
		padding: 0;
		margin: 0;
		width: 30px;
		height: 30px;
	}

	nav ul li:last-child a
	{
		background-color: #999999;
		color: black;
		cursor: pointer;
		margin: 0;
	}

	nav ul li:last-child a:hover
	{
		background-color: #ADADAD;
	}

	header
	{
		margin-top: 0px;
	}

    footer
    {
        padding-bottom: 40px;
    }

	footer h2
	{
		font-size: 15px;
        margin-top: 0;
	}

	footer p
	{
		font-size: 10px;
	}
}

